WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206375
Call AtomString::init in WebKit2Initialize
https://bugs.webkit.org/show_bug.cgi?id=206375
Summary
Call AtomString::init in WebKit2Initialize
Daniel Chen
Reported
2020-01-16 14:26:06 PST
Prevents crashing on launch in Safari.
Attachments
Patch
(1.76 KB, patch)
2020-01-16 14:29 PST
,
Daniel Chen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Chen
Comment 1
2020-01-16 14:29:17 PST
Created
attachment 387959
[details]
Patch
WebKit Commit Bot
Comment 2
2020-01-16 16:51:23 PST
Comment on
attachment 387959
[details]
Patch Clearing flags on attachment: 387959 Committed
r254723
: <
https://trac.webkit.org/changeset/254723
>
WebKit Commit Bot
Comment 3
2020-01-16 16:51:25 PST
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 4
2020-01-16 20:39:50 PST
Filed:
Bug 206394
– [WinCairo][WK2] ASSERT(isUIThread()) is failing since
r254723
Radar WebKit Bug Importer
Comment 5
2020-01-16 20:40:00 PST
<
rdar://problem/58669977
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug