Cherry-pick r254723. rdar://problem/58664141

Call AtomString::init in WebKit2Initialize.
    <https://webkit.org/b/206375>
    <rdar://problem/58646578>

    Patch by Daniel Chen <thedanielchen@apple.com> on 2020-01-16
    Reviewed by Timothy Hatcher.

    * Shared/Cocoa/WebKit2InitializeCocoa.mm:
    (WebKit::runInitializationCode):
    * Shared/WebKit2Initialize.cpp:
    (WebKit::InitializeWebKit2):

    Canonical link: https://commits.webkit.org/219469@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254723 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/219244.22@safari-610.1.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.1-branch@255285 268f45cc-cd09-0410-ab3c-d52691b4dbfc